# mutationTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
include/: bitstrings.hpp  percolation.hpp  probability.hpp
